--- a/src/scss/partials/_commons.scss
+++ b/src/scss/partials/_commons.scss
@@ -7,7 +7,12 @@
 }
 
 .container {
-    width: 1200px;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.container-2 {
+    max-width: 800px;
     margin: auto;
 }
 
