--- a/src/scss/partials/_commons.scss
+++ b/src/scss/partials/_commons.scss
@@ -16,6 +16,11 @@
     margin: auto;
 }
 
+.container-3 {
+    max-width: 1440px;
+    margin: auto;
+}
+
 h1 {
     font-size: $titolo-h1;
     font-weight: 500;
@@ -38,8 +43,9 @@ a {
     text-decoration: none;
 }
 
-
-
+img {
+    width: 100%;
+}
 
 
 
