--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -2,37 +2,99 @@
     background-color: $color-salmone;
     text-align: center;
 
-    h2, hr {
-        padding: 100px 0px;
+    h2 {
+        padding: 90px 0px;
+    }
+
+    hr {
+        margin: 90px auto;
+        color: #888;
+        height: 1px;
     }
 
     .traditional-people,
     .modern-people {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-        grid-auto-rows: 1fr;
+        grid-auto-rows: minmax(150px, 3fr);
+        justify-content: center;
         grid-gap: 80px;
 
         .card {
             img {
                 display: block;
                 width: 100%;
-                margin-bottom: 30px;
             }
             p {
                 font-size: 16px;
+                margin-top: 30px;
             }
         }
 
         .card-4 {
             grid-column: 2 / 3;
+            justify-self: center;
+
+            img {
+                width: auto;
+                height: 100%;
+            }
         }
 
     }
 }
 
 #main-bottom {
+    padding: 90px 0px;
 
+    .row {
+        padding: 50px 0px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 30px;
+
+        .box-text {
+
+            display: grid;
+            grid-template-columns: 55% 1fr;
+
+            p {
+                padding: 20px 0px;
+            }
+
+            figure {
+                text-align: center;
+
+                img {
+                    margin-top: 30px;
+                    width: 70%;
+                }
+            }
+        }
+
+        .box-text-2 {
+
+            display: grid;
+            grid-template-columns: 1fr 55%;
+
+            .float-right {
+                grid-column: 2 / 3;
+            }
+
+            p {
+                padding: 20px 0px;
+            }
+
+            figure {
+                text-align: center;
+
+                img {
+                    margin-top: 30px;
+                    width: 70%;
+                }
+            }
+        }
+    }
 }
 
 
@@ -51,6 +113,50 @@
 
 
 
+    // padding: 90px 0px;
+    //
+    // .row {
+    //     display: flex;
+    //     height: 600px;
+    //
+    //     &.row-2 {
+    //         flex-direction: row-reverse;
+    //     }
+    //
+    //     .box-img {
+    //         width: 50%;
+    //     }
+    //
+    //     .box-text {
+    //         width: 50%;
+    //         display: flex;
+    //         flex-direction: column;
+    //         align-items: flex-end;
+    //
+    //         h2 {
+    //             max-width: 70%;
+    //             margin-block-end: 0em;
+    //             margin-block-start: 0em;
+    //         }
+    //
+    //         a {
+    //             font-size: 24px;
+    //             margin: 30px 0px;
+    //         }
+    //
+    //         figure {
+    //             text-align: center;
+    //
+    //             img {
+    //                 max-width: 30%;
+    //             }
+    //         }
+    //     }
+    //
+    //     p {
+    //         max-width: 400px;
+    //     }
+    // }
 
 
 // END
