--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,4 +2,5 @@
 @import 'partials/_commons';
 @import 'partials/_header';
 @import 'partials/_main';
+@import 'partials/_get-started';
 @import 'partials/_footer';
